# meeting-notes-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: config.py  main.py  pipeline.py  queue.py  schemas.py  storage.py  worker.py
api/tests/: test_summary_api_settings.py
scripts/: open-app.sh
src/: App.tsx  styles.css  types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: HealthBar.tsx  HomePanel.tsx  MeetingDetail.tsx  MeetingList.tsx  RecordingControls.tsx  RecordingModeCards.tsx  RecordingsPanel.tsx  Sidebar.tsx  SummaryApiPanel.tsx
src/hooks/: useMeetingRecorder.ts  useMeetings.ts  useSummaryApiSettings.ts
src/lib/: api.ts
web/: package-lock.json  package.json
web/app/: globals.css  layout.js  page.js
web/app/components/: HealthBar.js  MeetingDetail.js  MeetingList.js  RecordingControls.js
