[project]
name = "meeting-notes-api"
version = "0.1.0"
description = "Backend service for post-meeting recording, transcription, and summarization."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "pydantic-settings==2.8.1",
  "python-dotenv==1.0.1",
  "redis==5.2.1",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "faster-whisper==1.1.1",
  "requests==2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
